# opensdrm

./: .gitignore  README.md  __config.inc.php  ccol.xsd  ccol_sample.xml  config.inc.php  opensdrm.sql  phpinfo.php  testeWS.php
client/media_players/zinfx/: AUTHORS  Authors.txt  CHANGES  INSTALL  Makefile-plugins.in  Makefile.header.in  Makefile.in  Makefile.towav  Makefile.towav.in  NEWS  README.corbaui  README.lcdui  README.linux  README.qnx  README.solaris  README.win32  ReadMe.txt  acinclude.m4  aclocal.m4  autogen.sh  binary  configure.in  dir  dir.sh  import  install-zinf  rev.pl  zinf.cpp
client/media_players/zinfx/base/include/: _minmax.h  database.h  debug.h  downloadformat.h  downloadmanager.h  errors.h  event.h  eventdata.h  facontext.h  help.h  log.h  metadata.h  missingfile.h  musiccatalog.h  player.h  playlist.h  playlistformat.h  plmevent.h  portabledevice.h  preferences.h  prefixprefs.h  properties.h  propimpl.h  queue.h  registrar.h  registry.h  thread.h  timer.h  undomanager.h  utility.h
client/media_players/zinfx/base/src/: database.cpp  debug.cpp  downloadmanager.cpp  errors.cpp  log.cpp  missingfile.cpp  musiccatalog.cpp  player.cpp  playlist.cpp  preferences.cpp  prefixprefs.cpp  propimpl.cpp  registrar.cpp  registry.cpp  thread.cpp  timer.cpp  undomanager.cpp  utility.cpp
client/media_players/zinfx/base/unix/include/: browser.h  mutex.h  pthreadthread.h  semaphore.h  unixprefs.h  utility.h  win32impl.h
client/media_players/zinfx/base/unix/src/: bootstrap.cpp  browser.cpp  debug.cpp  mutex.cpp  pthreadthread.cpp  semaphore.cpp  unixprefs.cpp  utility.cpp  win32impl.cpp
client/media_players/zinfx/base/win32/include/: mutex.h  semaphore.h  win32prefs.h  win32thread.h  win32updatemanager.h
client/media_players/zinfx/base/win32/prj/: FKEYS.TXT  fabaselib.dsp  fabaselib.mak  zinf.dsp  zinf.dsw  zinf.mak  zinf.ncb  zinf.opt  zinf.plg
client/media_players/zinfx/base/win32/res/: resource.h  zinf.rc
client/media_players/zinfx/base/win32/src/: main.cpp  mutex.cpp  semaphore.cpp  win32prefs.cpp  win32thread.cpp  win32updatemanager.cpp
client/media_players/zinfx/config/: config.h  config.h.in  config.sub  config.win32  mkinstalldirs
client/media_players/zinfx/dlm/rmp/: rmp.cpp  rmp.h
client/media_players/zinfx/dlm/rmp/prj/: rmp.def  rmp.dsp  rmp.dsw  rmp.ilk  rmp.mak
client/media_players/zinfx/dlm/rmp/res/: resource.h  rmp.rc
client/media_players/zinfx/ftc/kjofol/: kjofol.cpp  kjofol.h
client/media_players/zinfx/ftc/winamp/: winamp.cpp  winamp.h  winamp_theme.xml
client/media_players/zinfx/ftc/winamp/prj/: winamp.def  winamp.dsp  winamp.dsw  winamp.mak
client/media_players/zinfx/ftc/winamp/res/: resource.h  winamp.rc
client/media_players/zinfx/installer/unix/: make-binary-dist
client/media_players/zinfx/installer/unix/linux/: Zinf.desktop  erradicate_zinf  zinf.spec
client/media_players/zinfx/installer/win32/: zinf.wse
client/media_players/zinfx/io/arts/include/: artspmo.h
client/media_players/zinfx/io/arts/src/: artspmo.cpp
client/media_players/zinfx/io/esound/include/: esoundpmo.h
client/media_players/zinfx/io/esound/src/: esoundpmo.cpp
client/media_players/zinfx/io/http/: httpinput.cpp  httpinput.h
client/media_players/zinfx/io/include/: eventbuffer.h  pipeline.h  pmi.h  pmo.h  pmoevent.h  pullbuffer.h  tstream.h  win32volume.h
client/media_players/zinfx/io/local/: localfileinput.cpp  localfileinput.h
client/media_players/zinfx/io/obs/: obsinput.cpp  obsinput.h
client/media_players/zinfx/io/rio/: RIO CODE HAS MOVED.txt
client/media_players/zinfx/io/src/: eventbuffer.cpp  pipeline.cpp  pmi.cpp  pmo.cpp  pullbuffer.cpp  tstream.cpp  win32volume.cpp
client/media_players/zinfx/io/wavout/include/: wav.h  wavoutpmo.h
client/media_players/zinfx/io/wavout/src/: wav.cpp  wavoutpmo.cpp
client/media_players/zinfx/lib/gdbm/: bucket.c  extern.h  falloc.c  findkey.c  gdbm.lib  gdbm_fa.h  gdbmclose.c  gdbmconst.h  gdbmdefs.h  gdbmdelete.c  gdbmerrno.c  gdbmerrno.h  gdbmexists.c  gdbmfdesc.c  gdbmfetch.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  gdbmstore.c  gdbmsync.c  global.c  hash.c  proto.h  systems.h  update.c  version.c
client/media_players/zinfx/lib/gdbm/config/: config.h  config.win32
client/media_players/zinfx/lib/gdbm/prj/: gdbm.dsp  gdbm.dsw  gdbm.mak
client/media_players/zinfx/lib/http/include/: Http.h
client/media_players/zinfx/lib/http/src/: Http.cpp
client/media_players/zinfx/lib/musicbrainz/: musicbrainz.lib
client/media_players/zinfx/lib/musicbrainz/musicbrainz/: bitprintinfo.h  mb_c.h  queries.h
client/media_players/zinfx/lib/portio/: portio.c  portio.rc  resource.h  sources
client/media_players/zinfx/lib/unzip/: unzip.lib
client/media_players/zinfx/lib/unzip/include/: zip_header.h  zip_inflate.h  zip_testcrc.h  zip_utils.h  zip_wrapper.h
client/media_players/zinfx/lib/unzip/prj/: unzip.dsp  unzip.dsw  unzip.mak
client/media_players/zinfx/lib/unzip/src/: zip_header.cpp  zip_inflate.cpp  zip_testcrc.cpp  zip_utils.cpp  zip_wrapper.cpp
client/media_players/zinfx/lib/vorbis/ogg/: ogg.h  os_types.h
client/media_players/zinfx/lib/vorbis/vorbis/: codec.h  vorbisenc.h  vorbisfile.h
client/media_players/zinfx/lib/xml/dtd/: FreeAmpStreams.dtd
client/media_players/zinfx/lib/xml/include/: Parse.h
client/media_players/zinfx/lib/xml/src/: Parse.cpp
client/media_players/zinfx/lib/zlib/: zlib.lib
client/media_players/zinfx/lib/zlib/include/: deflate.h  zconf.h  zutil.h
client/media_players/zinfx/lmc/include/: lmc.h
client/media_players/zinfx/themes/: Aquatica.fat  Zinf.fat  ZinfClassic.fat
client/media_players/zinfx/ui/cmdline/: cmdlineUI.cpp  cmdlineUI.h
client/media_players/zinfx/ui/corba/: Freeamp-common.c  Freeamp-skels.c  Freeamp-stubs.c  Freeamp.h  Freeamp.idl  corba.c  corba.h  corbaUI.cpp  corbaUI.h
client/media_players/zinfx/ui/include/: ui.h
client/media_players/zinfx/ui/mpg123/: Mpg123UI.cpp  Mpg123UI.h
client/media_players/zinfx/ui/ncurses/: ncursesUI.cpp  ncursesUI.h
client/media_players/zinfx/update/win32/: main.cpp
(+1037 files in other folders)
